// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toMatchVolume() > integration > 'binary files mismatch' 1`] = `[Error: Found file content mismatch at \`/bin.dat\`]`;

exports[`toMatchVolume() > integration > 'content mismatch' 1`] = `[Error: Found file content mismatch at \`/foo.txt\`]`;

exports[`toMatchVolume() > integration > 'empty dir vs missing dir' 1`] = `[Error: Directory structure didn’t match]`;

exports[`toMatchVolume() > integration > 'extra file' 1`] = `[Error: Directory structure didn’t match]`;

exports[`toMatchVolume() > integration > 'invalid object type (expected)' 1`] = `[TypeError: You must provide a memfs Volume instance or plain JSON object to [2mexpect([22m[31mreceived[39m[2m).[22mtoMatchVolume[2m([22m[32mexpected[39m[2m)[22m, not \`object\`]`;

exports[`toMatchVolume() > integration > 'invalid type (expected)' 1`] = `[TypeError: You must provide a memfs Volume instance or plain JSON object to [2mexpect([22m[31mreceived[39m[2m).[22mtoMatchVolume[2m([22m[32mexpected[39m[2m)[22m, not \`string\`]`;

exports[`toMatchVolume() > integration > 'invalid type (received)' 1`] = `[Error: Expected [31m"invalid"[39m to be a memfs Volume instance]`;

exports[`toMatchVolume() > integration > 'large binary file mismatch' 1`] = `[Error: Found file content mismatch at \`/big.bin\`]`;

exports[`toMatchVolume() > integration > 'missing file' 1`] = `[Error: Directory structure didn’t match]`;

exports[`toMatchVolume() > integration > 'not: identical files' 1`] = `[Error: Expected volumes to not match, but they did]`;

exports[`toMatchVolume() > integration > 'respects contentMatch=ignore option (mismatch)' 1`] = `[Error: Found path type mismatch at \`/link.txt\`]`;

exports[`toMatchVolume() > integration > 'respects listMatch=ignore-extra option (mismatch)' 1`] = `[Error: Volume is missing 1 expected file]`;

exports[`toMatchVolume() > integration > 'respects listMatch=ignore-missing option (mismatch)' 1`] = `[Error: Volume has 1 unexpected file]`;

exports[`toMatchVolume() > integration > 'symlink target mismatch' 1`] = `[Error: Found symlink target mismatch at \`/link.txt\`]`;

exports[`toMatchVolume() > unit > 'accepts json input' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'accepts json input' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'binary files match' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'binary files match' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'binary files mismatch' > result 1`] = `
{
  "actual": BinaryFile {
    "hash": "d78f8bb992a56a597f6c7a1fb918bb78271367eb",
    "length": 4,
    "preview": "3q2+7w==",
  },
  "expected": BinaryFile {
    "hash": "1465dad126d32bf7aa5d3b95a5c7c331cdff34df",
    "length": 4,
    "preview": "yv66vg==",
  },
  "message": "Found file content mismatch at \`/bin.dat\`",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'binary files mismatch' > result-all 1`] = `
{
  "actual": {
    "/bin.dat": BinaryFile {
      "hash": "d78f8bb992a56a597f6c7a1fb918bb78271367eb",
      "length": 4,
      "preview": "3q2+7w==",
    },
  },
  "expected": {
    "/bin.dat": BinaryFile {
      "hash": "1465dad126d32bf7aa5d3b95a5c7c331cdff34df",
      "length": 4,
      "preview": "yv66vg==",
    },
  },
  "message": "Found 1 mismatched content",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'content mismatch' > result 1`] = `
{
  "actual": File {
    "data": "hello",
  },
  "expected": File {
    "data": "world",
  },
  "message": "Found file content mismatch at \`/foo.txt\`",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'content mismatch' > result-all 1`] = `
{
  "actual": {
    "/foo.txt": File {
      "data": "hello",
    },
  },
  "expected": {
    "/foo.txt": File {
      "data": "world",
    },
  },
  "message": "Found 1 mismatched content",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'empty dir vs missing dir' > result 1`] = `
{
  "actual": [
    "/empty",
  ],
  "expected": [
    "/",
  ],
  "message": "Directory structure didn’t match",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'empty dir vs missing dir' > result-all 1`] = `
{
  "actual": {
    "/empty": Directory {},
  },
  "expected": {
    "/": Directory {},
  },
  "message": "Found 2 mismatches: 1 missing path, 1 unexpected path",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'empty directories match' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'empty directories match' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'extra file' > result 1`] = `
{
  "actual": [
    "/bar.txt",
    "/foo.txt",
  ],
  "expected": [
    "/foo.txt",
  ],
  "message": "Directory structure didn’t match",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'extra file' > result-all 1`] = `
{
  "actual": {
    "/bar.txt": File {
      "data": "extra",
    },
    "/foo.txt": {},
  },
  "expected": {
    "/foo.txt": {},
  },
  "message": "Found 1 unexpected path",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'identical files' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'identical files' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'invalid object type (expected)' > result 1`] = `[TypeError: You must provide a memfs Volume instance or plain JSON object to hint(toMatchVolume), not \`object\`]`;

exports[`toMatchVolume() > unit > 'invalid type (expected)' > result 1`] = `[TypeError: You must provide a memfs Volume instance or plain JSON object to hint(toMatchVolume), not \`string\`]`;

exports[`toMatchVolume() > unit > 'invalid type (received)' > result 1`] = `
{
  "actual": "invalid",
  "expected": Volume {},
  "message": "Expected received("invalid") to be a memfs Volume instance",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'large binary file mismatch' > result 1`] = `
{
  "actual": BinaryFile {
    "hash": "cd561c0d1e53dbd0cd390f4b2cd3728db7dd71fc",
    "length": 100000,
    "preview": "qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=...qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=",
  },
  "expected": BinaryFile {
    "hash": "814bf2767d4339019bf26a4d3a35066ad9c0f6c7",
    "length": 100000,
    "preview": "qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=...qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=",
  },
  "message": "Found file content mismatch at \`/big.bin\`",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'large binary file mismatch' > result-all 1`] = `
{
  "actual": {
    "/big.bin": BinaryFile {
      "hash": "cd561c0d1e53dbd0cd390f4b2cd3728db7dd71fc",
      "length": 100000,
      "preview": "qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=...qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=",
    },
  },
  "expected": {
    "/big.bin": BinaryFile {
      "hash": "814bf2767d4339019bf26a4d3a35066ad9c0f6c7",
      "length": 100000,
      "preview": "qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=...qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqo=",
    },
  },
  "message": "Found 1 mismatched content",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'missing file' > result 1`] = `
{
  "actual": [
    "/foo.txt",
  ],
  "expected": [
    "/bar.txt",
    "/foo.txt",
  ],
  "message": "Directory structure didn’t match",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'missing file' > result-all 1`] = `
{
  "actual": {
    "/foo.txt": {},
  },
  "expected": {
    "/bar.txt": File {
      "data": "extra",
    },
    "/foo.txt": {},
  },
  "message": "Found 1 missing path",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'not: content mismatch' > result 1`] = `
{
  "actual": File {
    "data": "hello",
  },
  "expected": File {
    "data": "world",
  },
  "message": "Found file content mismatch at \`/foo.txt\`",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'not: content mismatch' > result-all 1`] = `
{
  "actual": {
    "/foo.txt": File {
      "data": "hello",
    },
  },
  "expected": {
    "/foo.txt": File {
      "data": "world",
    },
  },
  "message": "Found 1 mismatched content",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'not: extra file' > result 1`] = `
{
  "actual": [
    "/bar.txt",
    "/foo.txt",
  ],
  "expected": [
    "/foo.txt",
  ],
  "message": "Directory structure didn’t match",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'not: extra file' > result-all 1`] = `
{
  "actual": {
    "/bar.txt": File {
      "data": "extra",
    },
    "/foo.txt": {},
  },
  "expected": {
    "/foo.txt": {},
  },
  "message": "Found 1 unexpected path",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'not: identical files' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'not: identical files' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore option (mismatch)' > result 1`] = `
{
  "actual": Symlink {},
  "expected": File {},
  "message": "Found path type mismatch at \`/link.txt\`",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore option (mismatch)' > result-all 1`] = `
{
  "actual": {
    "/foo.txt": {},
    "/link.txt": Symlink {},
  },
  "expected": {
    "/foo.txt": {},
    "/link.txt": File {},
  },
  "message": "Found 1 path type mismatch",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore option' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore option' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore-files option' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore-files option' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore-symlinks option' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects contentMatch=ignore-symlinks option' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-extra option (mismatch)' > result 1`] = `
{
  "actual": [
    "/foo.txt",
  ],
  "expected": [
    "/bar.txt",
    "/foo.txt",
  ],
  "message": "Volume is missing 1 expected file",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-extra option (mismatch)' > result-all 1`] = `
{
  "actual": {
    "/foo.txt": {},
  },
  "expected": {
    "/bar.txt": File {
      "data": "hey",
    },
    "/foo.txt": {},
  },
  "message": "Found 1 missing path",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-extra option' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-extra option' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-missing option (mismatch)' > result 1`] = `
{
  "actual": [
    "/extra.txt",
    "/foo.txt",
  ],
  "expected": [
    "/foo.txt",
  ],
  "message": "Volume has 1 unexpected file",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-missing option (mismatch)' > result-all 1`] = `
{
  "actual": {
    "/extra.txt": File {
      "data": "extra",
    },
    "/foo.txt": {},
  },
  "expected": {
    "/foo.txt": {},
  },
  "message": "Found 1 unexpected path",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-missing option' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects listMatch=ignore-missing option' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects prefix option (received)' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects prefix option (received)' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects prefix option' > result 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'respects prefix option' > result-all 1`] = `
{
  "message": "Volumes matched",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'same ref (singleton vol)' > result 1`] = `
{
  "message": "Volumes matched by reference",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'same ref (singleton vol)' > result-all 1`] = `
{
  "message": "Volumes matched by reference",
  "pass": true,
}
`;

exports[`toMatchVolume() > unit > 'symlink target mismatch' > result 1`] = `
{
  "actual": Symlink {
    "target": "/target1.txt",
  },
  "expected": Symlink {
    "target": "/target2.txt",
  },
  "message": "Found symlink target mismatch at \`/link.txt\`",
  "pass": false,
}
`;

exports[`toMatchVolume() > unit > 'symlink target mismatch' > result-all 1`] = `
{
  "actual": {
    "/link.txt": Symlink {
      "target": "/target1.txt",
    },
  },
  "expected": {
    "/link.txt": Symlink {
      "target": "/target2.txt",
    },
  },
  "message": "Found 1 mismatched content",
  "pass": false,
}
`;
